syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.test";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package Visualization;

// The Classify service definition.
service Visualize {
  // Sends a url
  rpc UrlVisualization (Request) returns (Reply) {}
}

// The request message containing url.
message Request {
  string dataUrl = 1;
}

// The response message containing the results.
message Reply {
    int32 n=1;
    int32 n2=2;
    int32 n3=3;

    repeated string x1 =4;
    repeated int32 y1 =5;

    int32 r1 =6;
    int32 r2 =7;
    int32 r3 =8;
    int32 r21=9;
    int32 r22=10;
    int32 c1=11;
    int32 c2=12;

    repeated string columns=13;
    // string arr=14;

    // string p=15;
}