syntax = "proto3";
package example;
// java_package表示生成java代码的包名；
// java_multiple_files = true 表示生成多个java文件，若不设置该属性，则只会生成一个java文件；
// java_outer_classname表示包含message描述的java文件的类名；
option java_package = "com.example.grpc";
option java_multiple_files = true;
option java_outer_classname = "FederalProto";

message Request {
  string ip = 1;
  string url = 2;  // 地址
  string type = 3;  // 哪种方式
  string datainfoReq = 4;  // 数据
}

message Response {
  string ip = 1;
  string datainfoRet = 2;  // 数据传输的变量
  string time = 3; // 模型运行的时间
  int32 n=4; // n 总样本数量
  int32 n2=5; // n2 样本类别种类
  int32 n3=6; // n3 特征数量
  repeated string x1 =7; // x1 样本类别种类
  repeated int32 y1 =8; // y1 每类样本数量
  int32 r1 =9; // r1 缺失值数量
  int32 r2 =10; // r2 异常值数量
  int32 r3 =11; // r3 既不是缺失值也不是异常值占比（不可能同为缺失值和异常值)
  int32 r21=12; // r21 特征值中的字符数量
  int32 r22=13; // r22 特征值中非字符数据数量
  int32 c1=14; // c1 连续
  int32 c2=15; // c2 离散
  repeated string columns=16;
  message Arr{
    repeated double values = 17;
  }
  repeated Arr arr=18;
}


service ArithmeticServer {
  rpc dataInfo (Request) returns (Response);
  rpc localTrain (Request) returns (Response);
}
